Add comments in task
