# routes/web.php
@@ -3,15 +3,14 @@
 declare(strict_types=1);
 
 use App\Controllers\AuthController;
-use App\Controllers\TaskController;
+use App\Controllers\CommentController;
 use App\Controllers\DashboardController;
 use App\Controllers\ProfileController;
+use App\Controllers\TaskController;
 use App\Middleware\AuthMiddleware;
 use App\Middleware\GuestMiddleware;
 
-$router->get('/', function () {
-    \App\Core\Response::redirect('/login');
-});
+$router->get('/', [AuthController::class, 'showLogin']);
 
 $router->get('/login', [AuthController::class, 'showLogin'], [GuestMiddleware::class]);
 $router->post('/login', [AuthController::class, 'login'], [GuestMiddleware::class]);
@@ -36,8 +35,13 @@ $router->get('/tasks/{id}/delete', [TaskController::class, 'destroy'], [AuthMidd
 $router->get('/tasks/{id}/complete', [TaskController::class, 'complete'], [AuthMiddleware::class]);
 $router->get('/tasks/{id}/restore', [TaskController::class, 'restore'], [AuthMiddleware::class]);
 
+$router->post('/tasks/{id}/comments', [CommentController::class, 'store'], [AuthMiddleware::class]);
+$router->get('/tasks/{id}/comments/{cid}/edit', [CommentController::class, 'edit'], [AuthMiddleware::class]);
+$router->put('/tasks/{id}/comments/{cid}', [CommentController::class, 'update'], [AuthMiddleware::class]);
+$router->get('/tasks/{id}/comments/{cid}/delete', [CommentController::class, 'destroy'], [AuthMiddleware::class]);
+
 $router->get('/profile', [ProfileController::class, 'show'], [AuthMiddleware::class]);
 $router->put('/profile', [ProfileController::class, 'update'], [AuthMiddleware::class]);
-$router->get('/profile/change-password', [ProfileController::class, 'changePassword'], [AuthMiddleware::class]);
+$router->get('/profile/change-password', [ProfileController::class, 'showChangePassword'], [AuthMiddleware::class]);
 $router->put('/profile/change-password', [ProfileController::class, 'changePassword'], [AuthMiddleware::class]);
 $router->post('/profile/avatar', [ProfileController::class, 'uploadAvatar'], [AuthMiddleware::class]);
